# nonlinear-2d-classifier

./: .gitignore  README.md  requirements.txt  setup.cfg
scripts/: gradient_check.py  train_flower_numpy.py  train_flower_torch.py  train_spiral_numpy.py  train_spiral_torch.py
src/: __init__.py
src/config/: defaults.py
src/data/: datasets.py  loaders.py
src/evaluation/: experiments.py  gradient_check.py
src/models/: fc_numpy.py  fc_torch.py  init.py
src/training/: losses.py  metrics.py  train_numpy.py  train_torch.py
src/utils/: numerics.py  onehot.py
src/visualization/: decision_boundary.py  savefig.py
tests/: test_forward_backward_shapes.py  test_gradient_check.py  test_training_smoke.py
