[metadata]
name = ml-flower-spiral-nn
version = 0.1.0
description = Fully connected NN (NumPy + PyTorch) with gradient checking on synthetic flower/spiral datasets.
license = MIT

[options]
python_requires = >=3.10
package_dir =
    = src

[tool:pytest]
addopts = -q
testpaths = tests
pythonpath = src

[flake8]
max-line-length = 100
extend-ignore = E203,W503
exclude = .venv,venv,build,dist,__pycache__,.pytest_cache
